Scrollbar Bug Fixes

--- a/SYMPOSIUM/src/components/Navbar.css
+++ b/SYMPOSIUM/src/components/Navbar.css
@@ -17,6 +17,7 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: fixed;
   top: 2%;
+  left: 4%;
 }
 
 .logo {
