--- a/SYMPOSIUM/src/index.css
+++ b/SYMPOSIUM/src/index.css
@@ -13,11 +13,10 @@ body {
   background: var(--bg);
   justify-content: center;
   font-family: "Krona One", sans-serif;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -63,6 +62,7 @@ body::-webkit-scrollbar {
   align-items: center;
   gap: 4rem;
   display: flex;
+  font-size: 8vw;
 }
 
 .arrow {
@@ -76,7 +76,7 @@ body::-webkit-scrollbar {
   font-family: "Krona One";
   margin-top: 14rem;
   z-index: 2;
-  font-size: 10vw;
+  font-size: 8vw;
 }
 
 .symp24 {
@@ -259,7 +259,7 @@ body::-webkit-scrollbar {
   text-align: center;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 910px) {
   .foot {
     font-size: 0.9rem;
   }
